# context-bot

./: .env.example  .gitignore  README.md  justfile  prompts.txt  pyproject.toml
src/bot/: __init__.py  api_client.py  config.py  context_manager.py  handlers.py
src/context_bot/: __init__.py  __main__.py  config.py  handlers.py
