[project]
name = "context-bot"
version = "0.1.0"
description = "Context telegram bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "openai>=1.82.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
context-bot = "bot:main"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.uv.build-backend]
module-name = "bot"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
